Fix layout issues/scrolling

--- a/website/scss/app.scss
+++ b/website/scss/app.scss
@@ -62,6 +62,28 @@ $panGrey: #BBBBBB;
   background-image: url('/static/img/downvote_0.png');
 }
 
+#reachRouter {
+  @apply h-full;
+}
+
+.appFrame {
+  @apply h-full;
+
+  // HACK: Reach Router inserts anonymous divs
+  > div:nth-of-type(2) {
+    flex: 1;
+    height: 100%;
+  }
+}
+
+.appFrame__banner {
+  min-height: 4rem;
+}
+
+.moveListPanel {
+  @apply h-full;
+}
+
 .moveList {
   @apply flexcol overflow-y-scroll;
 }
